kubernetes-orchestration/kubernetes-resources/ingress/host-based-routing/qa/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: qa
  name: my-deploy
spec:
  selector:
    matchLabels:
      app: my-app
  replicas: 2
  template:
    metadata:
      labels:
        app: my-app
    spec:
      terminationGracePeriodSeconds: 1
      containers:
        - name: nginx
          image: vinsdocker/k8s-app:v2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: qa
  name: my-app
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
