kubernetes-orchestration/kubernetes-resources/ingress/host-based-routing/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: qa
  name: my-ingress
spec:
  rules:
    - host: "qa.myapp.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  number: 80
